feat: update test